k8s/rabbitmq.yaml
# 1. Deployment for RabbitMQ
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        # This image includes the management UI plugin
        image: rabbitmq:3-management
        ports:
        # Port for the AMQP protocol (for our services)
        - containerPort: 5672
        # Port for the management UI
        - containerPort: 15672
---
# 2. Service for RabbitMQ
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc # The internal network name our services will use
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management-ui
      protocol: TCP
      port: 15672
      targetPort: 15672
  type: ClusterIP
