k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aai-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/users 
        pathType: Prefix 
        backend:
          service:
            name: user-service-svc
            port:
              number: 80

      - path: /api/airports
        pathType: Prefix
        backend:
          service:
            name: airport-service-svc
            port:
              number: 80

      - path: /api/reviews
        pathType: Prefix
        backend:
          service:
            name: review-service-svc
            port:
              number: 80

      - path: /api/flights
        pathType: Prefix
        backend:
          service:
            name: flight-service-svc
            port:
              number: 80

      - path: /api/bookings
        pathType: Prefix
        backend:
          service:
            name: booking-service-svc
            port:
              number: 80

      - path: /api/weather
        pathType: Prefix
        backend:
          service:
            name: weather-service-svc
            port:
              number: 80
            
      - path: /api/tracking
        pathType: Prefix
        backend:
          service:
            name: live-tracking-service-svc
            port:
              number: 80
